--- a/Erlang Calc all one code.ipynb
+++ b/Erlang Calc all one code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -13,10 +13,12 @@
       "Number of hours here: 1\n",
       "Average Handling Time in Seconds: 180\n",
       "Average Wait Time in Seconds: 20\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "Number of raw agents needed is:  14\n"
+      "Target Service Level here: 0.8\n",
+      "Number of raw agents needed is:  14\n",
+      "========================================\n",
+      "Number of agents needed is:  14\n",
+      "========================================\n",
+      "None\n"
      ]
     }
    ],
@@ -25,6 +27,27 @@
     "hours = int(input(\"Number of hours here: \"))\n",
     "AHT = int(input(\"Average Handling Time in Seconds: \"))\n",
     "Target_Time = int(input(\"Average Wait Time in Seconds: \"))\n",
+    "SLA = float(input(\"Target Service Level here: \"))\n",
+    "\n",
+    "while calls < 1:\n",
+    "    print(\"Calls needs to be an whole number greater than 0\")\n",
+    "    calls = int(input(\"Number of calls here: \"))\n",
+    "\n",
+    "while hours <1:\n",
+    "    print(\"Hours needs to be a whole number greater than 0\")\n",
+    "    hours = int(input(\"Number of hours here: \"))\n",
+    "    \n",
+    "while AHT <1:\n",
+    "    print(\"Average Handling Time needs to be a whole number greater than 0\")\n",
+    "    AHT = int(input(\"Average Handling Time in Seconds: \"))\n",
+    "\n",
+    "while Target_Time <1:\n",
+    "    print(\"Target Average Wait Time within service level needs to be a whole number greater than 0\")\n",
+    "    Target_Time = int(input(\"Average Wait Time in Seconds: \"))\n",
+    "\n",
+    "while SLA <=0 or SLA>1:\n",
+    "    print(\"SLA needs to be a positive number between 0 and 1\")\n",
+    "    SLA = float(input(\"Target SLA here: \"))\n",
     "\n",
     "calls_perhours = calls / hours\n",
     "\n",
@@ -67,7 +90,7 @@
     "service_level = 1-(Probability_of_wait*(e**traffic_wait))\n",
     "\n",
     "\n",
-    "while service_level < 0.8:\n",
+    "while service_level < SLA:\n",
     "    raw_agents = raw_agents + 1\n",
     "    Numerator = ((traffic_intensity**raw_agents)/factorial(raw_agents))*(raw_agents/(raw_agents - traffic_intensity))\n",
     "    ii = raw_agents - 1\n",
@@ -76,9 +99,15 @@
     "    Probability_of_wait = Numerator/denominator\n",
     "    traffic_wait = -(raw_agents-traffic_intensity)*(Target_Time/AHT)\n",
     "    service_level = 1-(Probability_of_wait*(e**traffic_wait))\n",
-    "    print(raw_agents)\n",
+    "    \n",
     "service_level\n",
-    "print(\"Number of raw agents needed is: \", raw_agents)"
+    "print(\"Number of raw agents needed is: \", raw_agents)\n",
+    "def solution(x):\n",
+    "    print(\"========================================\")\n",
+    "    print(\"Number of agents needed is: \", raw_agents)\n",
+    "    print(\"========================================\")\n",
+    "    \n",
+    "print(solution(SLA))"
    ]
   },
   {
